# scg_test

./: .gitignore  CMakeLists.txt  Program.cs  README.md  scg_test.cpp  scg_test.csproj  scg_test.sln
protodef/: scg_test.proto
protodef/protoFiles/: ScgTest.cs
protomessage/: scg_test.pb
source_cpp/: CMakeLists.txt  scg_test.cpp
source_cs/: Program.cs  scg_test.csproj
